<resources>
    <string name="app_name">FakeXposed</string>
    <string name="settings">Settings</string>
    <string name="filter_system_app">Filter system app</string>
    <string name="search">search</string>
    <string name="all_pkg">All App</string>
    <string name="data_model_name_load_class">Class hiding</string>
    <string name="data_model_name_statck_element">Stack class hiding</string>
    <string name="data_model_name_application_package">App hiding</string>
    <string name="data_model_name_system_prop">Property hiding</string>
    <string name="data_model_name_system_env">Environment hiding</string>
    <string name="data_model_name_global_system_prop">SystemProperties hiding</string>
    <string name="data_model_name_component_key">Component hiding</string>
    <string name="data_model_name_global_get_int">Global property hiding</string>
    <string name="data_model_name_runtime_exec">Runtime hiding</string>
    <string name="data_model_name_nothing">nothing</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_item_tip">Are you sure you want to delete the data?</string>
    <string name="add_item">Add item data</string>
    <string name="tip_load_class">Shielding method: Native + Java Hook\n\nShielding point: Class.classForName, BaseDexClassLoader.findClass method\n\nShielding rule: Keyword contains, case sensitive\n\nnote: Dynamically loaded classes can be blocked, direct references cannot be blocked temporarily</string>
    <string name="tip_stack_element">Shielding method: Native Java Hook\n\nShielding point: Throwable.nativeGetStackTrace\n\nShielding rule: Keyword contains, case sensitive\n\nnote: Only match the class name in the stack, if found, delete the element</string>
    <string name="tip_app_package">Shielding method: Dynamic proxy\n\nShielding point: PackageManager related method\n\nShielding rule: Package name exactly matches\n\nnote: Directly hide PackageManager query results on the blacklist</string>
    <string name="tip_system_property">Shielding method: Delete directly\n\nShielding point: System.getProperty method\n\nShielding rule: The property name exactly matches\n\nnote: Usually Java properties are not used, so delete the blacklist properties directly</string>
    <string name="tip_system_environment">Shielding method: Hook replace\n\nShielding point: System.getenv method\n\nShielding rule: The environment variable name matches exactly, and the variable value is replaced by a regular expression\n\nnote: Native intercept callback java processing</string>
    <string name="tip_global_system_properties">"Shielding method: Native Hook\n\nShielding point: native system property method\n\nShielding rule: The properties name exactly matches, the property value is replaced \n\nnote: Non-string type values will be converted to the corresponding type, you need to ensure that the string value is legal, otherwise it will cause native exception "</string>
    <string name="tip_component_keyword">Shielding method: Dynamic proxy\n\nShielding point: ActivityManager, ActivityTaskManager some methods\n\nShielding rule: Keyword match\n\nnote: Prevent access to the current application service, process, task, component name containing keywords</string>
    <string name="tip_global_getint">Shielding method: Hook\n\nShielding point: Global.getString method\n\nShielding rule: Property name exactly matches the value of the replacement property\n\nnote: Some debugging or development attributes need to be corrected, such as adb_enabled to determine whether adb is enabled. Non-string types need to be converted to the corresponding type by themselves, otherwise it will not take effect</string>
    <string name="tip_runtime_exec">"Shielding method: Native Java Hook\n\nShielding point: UNIXProcess.forkAndExec(Android 7 above)/ProcessManager.exec method\n\nShielding rule: The command name matches exactly, the parameter can be replaced, the input/output/error flow is fixed\n\nnote: Native Hook is a more low-level method, intercepting commands and replacing parameters. At present, the stream is only fixed. The input stream is the named normal output result, and the output stream is to write commands to the process. Usually, the wrong stream is the result of a named execution error. "</string>
    <string name="add_data_success">Add data success</string>
    <string name="uninstall">Uninstall</string>
    <string name="input_content">Input content</string>
    <string name="input_empty_content">Input content is empty</string>
    <string name="input_class_name_illegal">The input class name is invalid</string>
    <string name="input_invalid_property_name">The input invalid property name</string>
    <string name="add_item_key_system_property">Key</string>
    <string name="add_item_value_system_property">Value</string>
    <string name="add_item_key_name">Name</string>
    <string name="add_item_key_component_keyword">Process/Task keyword</string>
    <string name="add_item_key_property">Property name</string>
    <string name="add_item_value_property">Property value</string>
    <string name="input_illegal_number">The input an illegal number</string>
    <string name="old">Old</string>
    <string name="new_">New</string>
    <string name="cmd">Cmd</string>
    <string name="args">Args</string>
    <string name="input_stream">InputStream</string>
    <string name="output_stream">OutputStream</string>
    <string name="error_stream">ErrorStream</string>
    <string name="add_item_key_runtime_exec_name">Command name,do not modify if empty</string>
    <string name="add_item_key_runtime_exec_args">Command parameters, space separated parameters, \\\\ escape spaces</string>
    <string name="add_item_key_replace_args">Replacement parameters</string>
    <string name="add_item_key_input_stream_fixed">Fixed input stream</string>
    <string name="add_item_key_output_stream_fixed">Fixed output stream</string>
    <string name="add_item_key_error_stream_fixed">Fixed error stream</string>
    <string name="add_item_key_runtime_exec_old_name">Old command name, required</string>
    <string name="null_value">null</string>
    <string name="add_item_key_system_env">Environment variable name</string>
    <string name="add_item_value_system_env">Regular expression replacement value, multiple regular line breaks</string>
    <string name="data_model_name_file_blacklist">File hiding</string>
    <string name="tip_file_blacklist">Shielding method: Native Hook\n\nShielding point: fopen,open etc. method\n\nShielding rule: The file name matches exactly, the absolute path starts with ‘/’\n\nnote: Direct soft interrupt system calls cannot be intercepted</string>
    <string name="data_model_name_symbol_blacklist">Symbol hiding</string>
    <string name="tip_symbol_blacklist">Shielding method: Native Hook\n\nShielding point: dlsym function\n\nShielding rule: Symbol name matches exactly\n\nnote: Only use the dlsym method to dynamically obtain symbols to block, manual analysis such as maps files or soinfo cannot be blocked</string>
    <string name="data_model_name_maps_blacklist">Maps hiding</string>
    <string name="tip_maps_blacklist">Shielding method: Native Hook\n\nShielding point:  open etc. function\n\nShielding rule: Keyword match, delete line or replace keywords \n\nnote: File redirection replacement</string>
    <string name="add_item_key_file_blacklist">Full file name, case sensitive</string>
    <string name="add_item_key_symbol_blacklist">Dlsym shield symbol name</string>
    <string name="remove_line">Remove line</string>
    <string name="modify_line">Modify line</string>
    <string name="keyword">Keyword</string>
    <string name="replace_value">Replacement value</string>
    <string name="save">SAVE</string>
    <string name="data_has_changed">The data has changed, are you sure you want to exit?</string>
    <string name="edit_item_tip">Do you want to modify the data?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_me">About</string>
    <string name="setting_tip">Tip</string>
    <string name="status_normal">The plugin is activated</string>
    <string name="status_warning">The plugin is not activated</string>
    <string name="dismiss">Dismiss</string>
    <string name="use_notice">"Non-Edxposed on Android 9 and above may not be able to read the configuration file. The optional Root mode installation configuration file does not require additional permissions. If not, please enable the self-launching permission of this application. If some mobile phones enable the self-launching permission and still cannot read the configuration, it is recommended to change It turns on background retention to avoid being cleaned up. \nNote that for some simulators (such as Thunderbolt), the arm architecture is preferred when the application contains two architectures of arm and x86, so it will cause a crash. Just download the x86 version. For more introduction and feedback, please click the link below  "</string>
    <string name="native_hook_descriptor">About native hook description</string>
    <string name="about_app">About application</string>
    <string name="soft_reboot">Soft reboot</string>
    <string name="action_filter_xposed_app">Filter xposed app</string>
    <string name="disable">Disable</string>
    <string name="show_system">Show system app</string>
    <string name="show_non_system">Show non-system app</string>
    <string name="show_xposed">Show xposed app</string>
    <string name="show_non_xposed">Show non-xposed app</string>
    <string name="github">Github</string>
    <string name="donate">Donate</string>
    <string name="app_use_notice">The open source of this software is forever free for research and learning. Please do not use it for commercial purposes. It is strictly forbidden to use this software for all actions that violate current Chinese laws. Otherwise, all legal responsibilities and all consequences shall be borne by the user, and the development The person has nothing to do. This software may have compatibility issues, please pay attention to backup when opening the system process hook.</string>
    <string name="install_hook_configuration">Install Hook configuration file(root)</string>
    <string name="hook_configuration_update">Hook configuration has been updated and needs to be synchronized</string>
    <string name="sync">Synchronize</string>
    <string name="wechat_public_descriptor">Follow the author\'s public account</string>
    <string name="version">Version</string>
    <string name="share">Share</string>
    <string name="fakexposed_sources">FakeXposed Source</string>
    <string name="fakelinker_sources">fake-linker source</string>
    <string name="fakexposed_article">FakeXposed analyze</string>
    <string name="fakelinker_article">fake-linker analyze</string>
    <string name="fakelinker_source_link" translatable="false">https://github.com/sanfengAndroid/fake-linker</string>
    <string name="fakelinker_article_link" translatable="false">https://sanfengandroid.github.io/2021/01/10/modify-linker-to-implement-plt-hook/</string>
    <string name="fakexposed_source_link" translatable="false">https://github.com/sanfengAndroid/FakeXposed</string>
    <string name="fakexposed_article_link" translatable="false">https://sanfengandroid.github.io/2021/02/20/fakexposed-principle-analyze/</string>
</resources>