<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 FakeXposed by sanfengAndroid.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.XpFilter.TextInputLayout"
            android:hint="@string/add_item_key_runtime_exec_old_name"
            android:id="@+id/item_old_cmd_tip">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/item_old_cmd_et" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@+id/item_old_cmd_tip"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.XpFilter.TextInputLayout"
            android:hint="@string/add_item_key_runtime_exec_name"
            android:id="@+id/item_cmd_tip">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/item_cmd_et" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/item_cmd_tip"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/item_args_replace"
            android:text="@string/add_item_key_replace_args" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@+id/item_args_replace"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.XpFilter.TextInputLayout"
            android:hint="@string/add_item_key_runtime_exec_args"
            android:id="@+id/item_args_tip"
            android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/item_args_et" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@+id/item_args_tip"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.XpFilter.TextInputLayout"
            android:hint="@string/add_item_key_input_stream_fixed"
            android:id="@+id/item_input_string_tip">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/item_input_string_et" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@+id/item_input_string_tip"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.XpFilter.TextInputLayout"
            android:hint="@string/add_item_key_output_stream_fixed"
            android:id="@+id/item_output_string_tip">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/item_output_string_et" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@+id/item_output_string_tip"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.XpFilter.TextInputLayout"
            android:hint="@string/add_item_key_error_stream_fixed"
            android:id="@+id/item_error_string_tip">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/item_error_string_et" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>